--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -2,10 +2,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 80vh;
+  height: 520px;
   width: 100%;
   background-color: #323232;
   color: #ff7f7e;
+  position: relative;
 }
 
 .intro {
