--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -3,15 +3,15 @@
   justify-content: center;
   align-items: center;
   height: 520px;
-  width: 100%;
   background-color: #323232;
   color: #ff7f7e;
   position: relative;
+  padding: 2rem;
 }
 
 .intro {
-  width: 60%;
-  padding: 1rem;
+  width: 45%;
+  margin: 2%;
 }
 
 .title {
@@ -29,4 +29,9 @@
 
 .subtitle span {
   padding-top: 1rem;
+}
+
+.empty-card {
+  width: 5%;
+  margin: 2%;
 }
