Update few css styles

--- a/src/Components/WorkflowCard.css
+++ b/src/Components/WorkflowCard.css
@@ -1,6 +1,6 @@
 .flow-card {
   width: 25%;
-  margin: 2%;
+  margin: 1% 2%;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   background-color: #ffffff;
@@ -8,7 +8,7 @@
 }
 
 .flow-card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 16px 32px 0 rgba(0,0,0,0.2);
 }
 
 .flow-text {
