--- a/src/Components/Roadmap.css
+++ b/src/Components/Roadmap.css
@@ -22,7 +22,7 @@
 
 .list li {
     width: 25%;
-    padding: 1% 4%;
+    padding: 0.5% 4%;
     list-style-type: none;
 }
 
@@ -35,9 +35,9 @@ input[type="checkbox"] { display: none; }
 input[type="checkbox"] + label {
   display: block;
   position: relative;
-  padding-left: 35px;
+  padding-left: 15%;
   margin-left: 2%;
-  margin-bottom: 20px;
+  margin-bottom: 5%;
   font: 14px/20px 'Open Sans', Arial, sans-serif;
   color: #ddd;
   cursor: pointer;
