--- a/src/index.css
+++ b/src/index.css
@@ -3171,6 +3171,10 @@ button,
   opacity: .5;
 }
 
+.opacity-65 {
+  opacity: .65;
+}
+
 .opacity-75 {
   opacity: .75;
 }
@@ -7079,6 +7083,10 @@ button,
     opacity: .5;
   }
 
+  .sm\:opacity-65 {
+    opacity: .65;
+  }
+
   .sm\:opacity-75 {
     opacity: .75;
   }
@@ -10978,6 +10986,10 @@ button,
 
   .md\:opacity-50 {
     opacity: .5;
+  }
+
+  .md\:opacity-65 {
+    opacity: .65;
   }
 
   .md\:opacity-75 {
@@ -14881,6 +14893,10 @@ button,
     opacity: .5;
   }
 
+  .lg\:opacity-65 {
+    opacity: .65;
+  }
+
   .lg\:opacity-75 {
     opacity: .75;
   }
@@ -18780,6 +18796,10 @@ button,
 
   .xl\:opacity-50 {
     opacity: .5;
+  }
+
+  .xl\:opacity-65 {
+    opacity: .65;
   }
 
   .xl\:opacity-75 {
