--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,8 @@
 @tailwind preflight;
 
 @tailwind utilities;
+
+body {
+    background-image: url('./pattern.png');
+    background-repeat: repeat;
+}
